--- a/src/components/textArea/textArea.module.scss
+++ b/src/components/textArea/textArea.module.scss
@@ -12,10 +12,9 @@
 
   width: 100%;
   padding: 6px 12px;
-  border: 1px solid var(--color-dark-100);
-  border-radius: 2px;
+  border: none;
 
-  background-color: var(--color-dark-500);
+  background-color: transparent;
 
   &::placeholder {
     color: var(--color-light-900);
@@ -23,20 +22,13 @@
 
   &:disabled {
     pointer-events: none;
-    border-color: var(--color-dark-100);
 
     &::placeholder {
       color: var(--color-dark-100);
     }
   }
 
-  &:hover {
-    border-color: var(--color-light-900);
-  }
-
   &:active {
-    border-color: var(--color-light-100);
-
     &::placeholder {
       color: var(--color-light-100);
     }
